data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1196.wast
;; 7. **Test 7:** Create a loop containing multiple levels of branching with `unreachable` placed at various branch points.    - **Constraint:** Ensure that reaching `unreachable` via any branch results in an immediate trap.    - **Relation to Infinite Loops:** Confirms that all branches lead to a proper termination without infinite looping if `unreachable` is encountered.

(assert_invalid
  (module (func $loop-with-unreachable
    (loop
      (block
        (br_if 0 (i32.const 1))
        (unreachable)
      )
    )
  ))
  "type mismatch"
)